# GLAMR_omics_pipelines

./: .gitignore  AnnotateContigs.pl  BOSS.pl  Get_Info_Matrix.pl  LICENSE  README.md  ReadMe.md  Snakefile  config.defaults.yaml  config.yaml  config.yaml.example  contrast.matrix  default.conf  notes.md  pyproject.toml
code/: AnnotateContigs.pl  RemovePolyPairs.pl  amplicon-dispatch  amplicon-hmm-summarize  ampliconTrunc.R  amplicon_single.R  check_import_status.R  check_output_status.sh  combine_coverage  create_maxbin_coverage.R  guess-amplicon-target  import.Rmd  make_das_and_drep_inputs.R  make_metadecoder_coverage.R  make_rulegraph.sh  merge_bracken.R  merge_bracken_jgi_metaG.R  merge_kraken_tax.R  old_snakemake_rules  plot_contig_abund_uniref_LCA_single_sample.R  plot_metacoder.R  plot_metacoder_single_sample.R  postgres.Rmd  raw_reads.py  reduce_storage.R  rename_contigs.R  shell_prelude  split_combined_coverage  standardize_bins.R  summarize_hmmscan.R  summarize_marker_gene_read_mapping.R  tax_abund_from_contigs.R  update_output_status.R  update_output_status.sh  write_TPM_files.R
code/Strain-Level_Metagenome_Analysis/: Get_Info_Matrix.pl  Merge_Contigs.pl  README.md  spike-ins.fa
code/Strain-Level_Metatranscriptome_Analysis/: Metatranscriptome_Limma_R_Analysis.ipynb  RemovePoly.pl  design.matrix
code/amplicon/: __init__.py  alignment.py  dispatch.py  guess_target.py  hmm.py  hmm_model_data.py  hmm_summarize.py  primers.json  (+5 more)
data/: import_log.tsv
pypelib/: benchmark.py  config.py  mzmine.py  post.py  raw_reads.py  setup_test_env.py  sra.py  utils.py
(+94 files in other folders)
